--- a/ex3/ex31.html
+++ b/ex3/ex31.html
@@ -19,9 +19,24 @@
 <body>
     
     <table>
-        <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#00ff0f</td>
-        <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#012f0f</td>
-        <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#02134f</td>
+        <tr>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#00ff0f</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#012f0f</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#02134f</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#ff0000</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#00ffff</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#800080</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#ffa500</td>
+        </tr>
+        <tr>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#ff69b4</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#4682b4</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#9acd32</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#ff4500</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#20b2aa</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#dda0dd</td>
+            <td onmouseover="changeBg(this)" onmouseout="changeBg2white(this)">#32cd32</td>
+        </tr>
     </table>
 </body>
 </html>
