--- a/ex1b/page3.html
+++ b/ex1b/page3.html
@@ -20,7 +20,7 @@
 <body>
     <hr>
     <div id="home" class="full-screen">
-        <h1>PRAKASH RAJ S</h1>
+        <h1>BHARATH KUMAR S</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam nostrum eveniet est sapiente nulla voluptate in blanditiis reprehenderit corrupti dolor fugit odio expedita ex nesciunt, explicabo magnam iure modi consectetur aspernatur nisi, aperiam nihil ipsum harum fugiat? Nisi harum id inventore aperiam veniam voluptate. Minima temporibus vel quidem similique error?</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, odio quod facere quibusdam neque itaque. Nemo maiores eligendi sint molestias ab dolorem culpa quis unde. Id distinctio veniam in molestiae.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum molestias id fuga minus distinctio, temporibus labore minima eveniet saepe porro, nisi fugit itaque at ipsa vitae. Laboriosam cum officia officiis, illo magnam nisi dolore ducimus voluptate, adipisci qui hic veniam sed magni aliquam obcaecati ipsum accusantium est voluptates culpa rerum.</p>
