--- a/ex1b/page2.html
+++ b/ex1b/page2.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <center>
-        <img src="image1.jpg" alt="Profile Image">
-        <h1>PRAKASH RAJ S</h1>
+        <img src="image.jpg" alt="Profile Image">
+        <h1>BHARATH KUMAR S</h1>
         <h6>Bio</h6>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, sit.</p>
         
