--- a/ex3/ex36.html
+++ b/ex3/ex36.html
@@ -3,25 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag and Drop List</title>
-    <style>
-        ul {
-            list-style-type: none;
-            padding: 0;
-            width: 200px;
-            margin: 20px auto;
-        }
-        li {
-            padding: 10px;
-            margin: 5px 0;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            cursor: move;
-        }
-        .dragging {
-            opacity: 0.5;
-        }
-    </style>
+    <title>Simple Drag and Drop</title>
 </head>
 <body>
     <ul id="draggable-list">
@@ -33,44 +15,14 @@
     </ul>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const list = document.getElementById('draggable-list');
-            let draggedItem = null;
-
-            list.addEventListener('dragstart', function(event) {
-                draggedItem = event.target;
-                event.target.classList.add('dragging');
-            });
-
-            list.addEventListener('dragend', function(event) {
-                event.target.classList.remove('dragging');
-                draggedItem = null;
-            });
-
-            list.addEventListener('dragover', function(event) {
-                event.preventDefault();
-                const afterElement = getDragAfterElement(list, event.clientY);
-                const draggable = document.querySelector('.dragging');
-                if (afterElement == null) {
-                    list.appendChild(draggable);
-                } else {
-                    list.insertBefore(draggable, afterElement);
-                }
-            });
-
-            function getDragAfterElement(container, y) {
-                const draggableElements = [...container.querySelectorAll('li:not(.dragging)')];
-
-                return draggableElements.reduce((closest, child) => {
-                    const box = child.getBoundingClientRect();
-                    const offset = y - box.top - box.height / 2;
-                    if (offset < 0 && offset > closest.offset) {
-                        return { offset: offset, element: child };
-                    } else {
-                        return closest;
-                    }
-                }, { offset: Number.NEGATIVE_INFINITY }).element;
-            }
+        const list = document.getElementById('draggable-list');
+        list.addEventListener('dragstart', e => e.target.classList.add('dragging'));
+        list.addEventListener('dragend', e => e.target.classList.remove('dragging'));
+        list.addEventListener('dragover', e => {
+            e.preventDefault();
+            const dragged = document.querySelector('.dragging');
+            const afterElement = [...list.children].find(child => e.clientY < child.getBoundingClientRect().top); 
+            list.insertBefore(dragged, afterElement);
         });
     </script>
 </body>
